--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "@apimatic/schema": "^0.6.0",
     "axios": "^0.21.1",
+    "detect-browser": "^5.3.0",
     "detect-node": "^2.0.4",
     "form-data": "^3.0.0",
     "json-bigint": "^1.0.0",
