--- a/packages/convert-to-stream/package.json
+++ b/packages/convert-to-stream/package.json
@@ -33,6 +33,6 @@
     "typescript": "^4.6.3"
   },
   "browser": {
-    "./lib/convertToStream.ts": "./lib/convertToBlob.ts"
+    "./lib/convertToStream.js": "./lib/convertToBlob.js"
   }
 }
