--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apimatic/core",
-  "author": "Wajahat Iqbal",
+  "author": "APIMatic Ltd.",
   "version": "0.8.0",
   "license": "SEE LICENSE IN LICENSE.md",
   "sideEffects": false,
@@ -59,7 +59,11 @@
   },
   "dependencies": {
     "@apimatic/convert-to-stream": "0.0.2",
+    "@apimatic/core-interfaces": "0.1.0",
+    "@apimatic/file-wrapper": "0.1.0",
+    "@apimatic/http-headers": "0.1.0",
     "@apimatic/json-bigint": "^1.2.0",
+    "@apimatic/query-string": "0.1.0",
     "@apimatic/schema": "^0.6.0",
     "axios": "^0.21.1",
     "detect-browser": "^5.3.0",
