--- a/packages/axios-client-adapter/package.json
+++ b/packages/axios-client-adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apimatic/axios-client-adapter",
-  "author": "Wajahat Iqbal",
+  "author": "APIMatic Ltd.",
   "version": "0.1.0",
   "license": "SEE LICENSE IN LICENSE.md",
   "sideEffects": false,
