--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../core-interfaces/src/httpContext.ts"],
   "compilerOptions": {
     "outDir": "./lib",
     "rootDir": "./src",
