--- a/packages/oauth-adapters/package.json
+++ b/packages/oauth-adapters/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apimatic/oauth-adapters",
-  "author": "Mehdi Jaffery",
+  "author": "APIMatic Ltd.",
   "version": "0.1.0",
   "license": "SEE LICENSE IN LICENSE.md",
   "sideEffects": false,
@@ -74,6 +74,6 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:apimatic/apimatic-js-runtime.git",
-    "directory": "packages/authentication-adapter"
+    "directory": "packages/oauth-adapters"
   }
 }
