--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apimatic/schema",
-  "author": "Mehdi Jaffery",
+  "author": "APIMatic Ltd.",
   "version": "0.6.0",
   "license": "SEE LICENSE IN LICENSE.md",
   "sideEffects": false,
