--- a/packages/axios-client-adapter/package.json
+++ b/packages/axios-client-adapter/package.json
@@ -58,12 +58,12 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@apimatic/convert-to-stream": "0.0.2",
-    "@apimatic/core-interfaces": "../core-interfaces",
-    "@apimatic/file-wrapper": "../file-wrapper",
-    "@apimatic/http-headers": "../http-headers",
+    "@apimatic/convert-to-stream": "^0.0.2",
+    "@apimatic/core-interfaces": "^0.1.0",
+    "@apimatic/file-wrapper": "^0.1.0",
+    "@apimatic/http-headers": "^0.1.0",
     "@apimatic/json-bigint": "^1.2.0",
-    "@apimatic/query-string": "../query-string",
+    "@apimatic/query-string": "^0.1.0",
     "@apimatic/schema": "^0.6.0",
     "axios": "^0.21.1",
     "detect-browser": "^5.3.0",
