--- a/packages/core-interfaces/package.json
+++ b/packages/core-interfaces/package.json
@@ -58,7 +58,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@apimatic/file-wrapper": "../file-wrapper",
+    "@apimatic/file-wrapper": "^0.1.0",
     "tslib": "^2.1.0"
   },
   "publishConfig": {
