--- a/packages/oauth-adapters/package.json
+++ b/packages/oauth-adapters/package.json
@@ -62,10 +62,10 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@apimatic/schema": "../schema",
-    "@apimatic/core-interfaces": "../core-interfaces",
-    "@apimatic/file-wrapper": "../file-wrapper",
-    "@apimatic/http-headers": "../http-headers",
+    "@apimatic/schema": "^0.6.0",
+    "@apimatic/core-interfaces": "^0.1.0",
+    "@apimatic/file-wrapper": "^0.1.0",
+    "@apimatic/http-headers": "^0.1.0",
     "tslib": "^2.1.0"
   },
   "publishConfig": {
