--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -58,7 +58,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@apimatic/convert-to-stream": "0.0.2",
+    "@apimatic/convert-to-stream": "~0.0.2",
     "@apimatic/core-interfaces": "^0.1.0",
     "@apimatic/file-wrapper": "^0.1.0",
     "@apimatic/http-headers": "^0.1.0",
