add oauth adapter config

--- a/tsconfig.monorepo.json
+++ b/tsconfig.monorepo.json
@@ -30,6 +30,9 @@
     },
     {
       "path": "./packages/authentication-adapters"
+    },
+    {
+      "path": "./packages/oauth-adapters"
     }
   ]
 }
