--- a/packages/axios-client-adapter/package.json
+++ b/packages/axios-client-adapter/package.json
@@ -63,7 +63,7 @@
     "@apimatic/file-wrapper": "^0.1.0",
     "@apimatic/http-headers": "^0.1.0",
     "@apimatic/json-bigint": "^1.2.0",
-    "@apimatic/query-string": "^0.1.0",
+    "@apimatic/http-query": "^0.1.0",
     "@apimatic/schema": "^0.6.0",
     "axios": "^0.21.1",
     "detect-browser": "^5.3.0",
