--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -65,6 +65,7 @@
     "@apimatic/json-bigint": "^1.2.0",
     "@apimatic/http-query": "^0.1.0",
     "@apimatic/schema": "^0.6.0",
+    "@json-schema-spec/json-pointer": "^0.1.1",
     "axios": "^0.21.1",
     "detect-browser": "^5.3.0",
     "detect-node": "^2.0.4",
