--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
   "name": "@apimatic/core",
   "author": "APIMatic Ltd.",
   "version": "0.9.1",
-  "license": "SEE LICENSE IN LICENSE.md",
+  "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
   "module": "es/index.js",
