--- a/packages/http-headers/package.json
+++ b/packages/http-headers/package.json
@@ -2,7 +2,7 @@
   "name": "@apimatic/http-headers",
   "author": "APIMatic Ltd.",
   "version": "0.1.0",
-  "license": "SEE LICENSE IN LICENSE.md",
+  "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
   "module": "es/index.js",
