--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,14 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.TEST_REPORTER_ID }}
         with:
           coverageLocations: |
-            ${{github.workspace}}/coverage/lcov.info:lcov
-      
+            ${{github.workspace}}/packages/core/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/authentication-adapters/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/axios-client-adapter/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/convert-to-stream/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/core-interfaces/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/file-wrapper/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/http-headers/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/http-query/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/oauth-adapters/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/schema/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/xml-adapter/coverage/lcov.info:lcov
