--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -65,11 +65,11 @@
     "@apimatic/json-bigint": "^1.2.0",
     "@apimatic/http-query": "^0.1.0",
     "@apimatic/schema": "^0.6.0",
-    "@json-schema-spec/json-pointer": "^0.1.1",
     "axios": "^0.21.1",
     "detect-browser": "^5.3.0",
     "detect-node": "^2.0.4",
     "form-data": "^3.0.0",
+    "json-ptr": "^3.1.0",
     "lodash.flatmap": "^4.5.0",
     "tiny-warning": "^1.0.3",
     "tslib": "^2.1.0"
