--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,7 +17,7 @@
     "LICENSE.md"
   ],
   "engines": {
-    "node": ">=10.4.0"
+    "node": "^14.15.0"
   },
   "scripts": {
     "clean": "rm -rf lib es umd tsconfig.tsbuildinfo",
@@ -53,7 +53,7 @@
     "lerna-alias": "3.0.3-0",
     "rollup": "^2.79.0",
     "rollup-plugin-typescript2": "^0.30.0",
-    "size-limit": "^4.6.0",
+    "size-limit": "^8.2.4",
     "ts-jest": "^26.4.0",
     "typescript": "^4.1.2"
   },
