--- a/packages/xml-adapter/package.json
+++ b/packages/xml-adapter/package.json
@@ -17,7 +17,7 @@
     "LICENSE.md"
   ],
   "engines": {
-    "node": ">=10.4.0"
+    "node": "^14.15.0"
   },
   "scripts": {
     "clean": "rm -rf lib es umd tsconfig.tsbuildinfo",
@@ -58,7 +58,7 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
-    "size-limit": "^4.6.0",
+    "size-limit": "^8.2.4",
     "ts-jest": "^26.4.0",
     "typescript": "^4.1.2"
   },
