--- a/packages/convert-to-stream/package.json
+++ b/packages/convert-to-stream/package.json
@@ -6,7 +6,7 @@
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "engines": {
-    "node": "^14.15.0"
+    "node": ">=14.15.0"
   },
   "scripts": {
     "clean": "rm -rf lib es umd tsconfig.tsbuildinfo",
