--- a/packages/file-wrapper/package.json
+++ b/packages/file-wrapper/package.json
@@ -17,7 +17,7 @@
     "LICENSE.md"
   ],
   "engines": {
-    "node": "^14.15.0"
+    "node": ">=14.15.0"
   },
   "scripts": {
     "clean": "rm -rf lib es umd tsconfig.tsbuildinfo",
