--- a/packages/authentication-adapters/package.json
+++ b/packages/authentication-adapters/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@apimatic/authentication-adapters",
   "author": "APIMatic Ltd.",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
@@ -17,7 +17,7 @@
     "LICENSE.md"
   ],
   "engines": {
-    "node": ">=14.15.0"
+    "node": ">=14.15.0 || >=16.0.0"
   },
   "scripts": {
     "clean": "rm -rf lib es umd tsconfig.tsbuildinfo",
