--- a/packages/authentication-adapters/package.json
+++ b/packages/authentication-adapters/package.json
@@ -62,9 +62,9 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@apimatic/core-interfaces": "^0.1.0",
-    "@apimatic/http-query": "^0.1.0",
-    "@apimatic/http-headers": "^0.1.0",
+    "@apimatic/core-interfaces": "1.0.0",
+    "@apimatic/http-query": "1.0.0",
+    "@apimatic/http-headers": "1.0.0",
     "tslib": "^2.1.0"
   },
   "publishConfig": {
