--- a/packages/axios-client-adapter/package.json
+++ b/packages/axios-client-adapter/package.json
@@ -58,13 +58,13 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@apimatic/convert-to-stream": "^0.0.2",
-    "@apimatic/core-interfaces": "^0.1.0",
-    "@apimatic/file-wrapper": "^0.1.0",
-    "@apimatic/http-headers": "^0.1.0",
+    "@apimatic/convert-to-stream": "1.0.0",
+    "@apimatic/core-interfaces": "1.0.0",
+    "@apimatic/file-wrapper": "1.0.0",
+    "@apimatic/http-headers": "1.0.0",
     "@apimatic/json-bigint": "^1.2.0",
-    "@apimatic/http-query": "^0.1.0",
-    "@apimatic/schema": "^0.6.0",
+    "@apimatic/http-query": "1.0.0",
+    "@apimatic/schema": "1.0.0",
     "axios": "^0.21.1",
     "detect-browser": "^5.3.0",
     "detect-node": "^2.0.4",
