--- a/packages/authentication-adapters/package.json
+++ b/packages/authentication-adapters/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@apimatic/authentication-adapters",
   "author": "APIMatic Ltd.",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
@@ -62,9 +62,9 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@apimatic/core-interfaces": "1.0.0",
-    "@apimatic/http-query": "1.0.0",
-    "@apimatic/http-headers": "1.0.0",
+    "@apimatic/core-interfaces": "^0.2.0",
+    "@apimatic/http-query": "^0.2.0",
+    "@apimatic/http-headers": "^0.2.0",
     "tslib": "^2.1.0"
   },
   "publishConfig": {
