--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@apimatic/core",
   "author": "APIMatic Ltd.",
-  "version": "1.0.0",
+  "version": "0.10.0",
   "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
@@ -58,13 +58,13 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@apimatic/convert-to-stream": "^1.0.0",
-    "@apimatic/core-interfaces": "^1.0.0",
-    "@apimatic/file-wrapper": "^1.0.0",
-    "@apimatic/http-headers": "^1.0.0",
-    "@apimatic/json-bigint": "^1.0.0",
-    "@apimatic/http-query": "^1.0.0",
-    "@apimatic/schema": "^1.0.0",
+    "@apimatic/convert-to-stream": "~0.0.2",
+    "@apimatic/core-interfaces": "^0.2.0",
+    "@apimatic/file-wrapper": "^0.2.0",
+    "@apimatic/http-headers": "^0.2.0",
+    "@apimatic/json-bigint": "^1.2.0",
+    "@apimatic/http-query": "^0.2.0",
+    "@apimatic/schema": "^0.7.0",
     "axios": "^0.21.1",
     "detect-browser": "^5.3.0",
     "detect-node": "^2.0.4",
