build: add babel dependencies in convert-to-stream
closes #105

--- a/packages/convert-to-stream/package.json
+++ b/packages/convert-to-stream/package.json
@@ -25,6 +25,8 @@
   "author": "APIMatic Ltd.",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.29",
     "lerna-alias": "3.0.3-0",
