--- a/packages/xml-adapter/package.json
+++ b/packages/xml-adapter/package.json
@@ -35,11 +35,7 @@
   },
   "size-limit": [
     {
-      "path": "umd/schema.js",
-      "limit": "5 KB"
-    },
-    {
-      "path": "umd/schema.esm.js",
+      "path": "es/index.js",
       "limit": "5 KB"
     }
   ],
@@ -54,9 +50,6 @@
     "jsdom-global": "^3.0.2",
     "lerna-alias": "3.0.3-0",
     "rollup": "^2.79.0",
-    "rollup-plugin-filesize": "^9.1.2",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.0",
     "size-limit": "^7.0.8",
     "ts-jest": "^26.4.0",
