--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -55,8 +55,7 @@
     "rollup-plugin-typescript2": "^0.31.0",
     "size-limit": "^7.0.8",
     "ts-jest": "^26.4.0",
-    "typescript": "^4.1.2",
-    "winston": "^3.13.0"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "@apimatic/convert-to-stream": "^0.0.2",
