--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@apimatic/core",
   "author": "APIMatic Ltd.",
-  "version": "0.10.5",
+  "version": "0.10.6",
   "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
@@ -45,6 +45,7 @@
     "@size-limit/preset-small-lib": "^7.0.8",
     "@types/detect-node": "^2.0.0",
     "@types/lodash.flatmap": "^4.5.6",
+    "@types/lodash.defaultsdeep": "^4.6.9",
     "abort-controller": "^3.0.0",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "jest": "^26.4.2",
@@ -70,6 +71,7 @@
     "form-data": "^3.0.0",
     "json-ptr": "^3.1.0",
     "lodash.flatmap": "^4.5.0",
+    "lodash.defaultsdeep": "^4.6.1",
     "tiny-warning": "^1.0.3",
     "tslib": "^2.1.0"
   },
