--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,9 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
+  "version": "independent",
   "packages": [
     "packages/*"
   ],
-
-  "version": "0.9.3"
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
