--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,3 +90,12 @@ jobs:
         run: |
            git branch -D ci-version-update &>/dev/null || true
            git push origin :ci-version-update &>/dev/null || true
+
+      - name: Send slack notification
+        id: slack
+        uses: slackapi/slack-github-action@v1.25.0
+        with:
+            channel-id: 'C012YFE3D6D'
+            slack-message: "apimatic-js-runtime release has been triggered!"
+        env:
+            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
