--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# JetBrains IDE configuration files
+.idea/
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/tasks.json
