--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: yarn build
 
       - name: Test
-        run: yarn test --ci --coverage --maxWorkers=2
+        run: yarn test
 
       - name: Lint
         run: yarn lint
@@ -50,3 +50,4 @@ jobs:
             ${{github.workspace}}/packages/http-query/coverage/lcov.info:lcov
             ${{github.workspace}}/packages/oauth-adapters/coverage/lcov.info:lcov
             ${{github.workspace}}/packages/schema/coverage/lcov.info:lcov
+            ${{github.workspace}}/packages/test-helper/coverage/lcov.info:lcov
