--- a/packages/convert-to-stream/package.json
+++ b/packages/convert-to-stream/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "clean": "rm -rf lib es umd tsconfig.tsbuildinfo",
     "test": "jest --passWithNoTests",
-    "build": "npm run clean && tsc && rollup -c && npm run annotate:es",
+    "build": "npm run clean && tsc && rollup -c --bundleConfigAsCjs && npm run annotate:es",
     "annotate:es": "babel es --out-dir es --no-babelrc --plugins annotate-pure-calls",
     "preversion": "npm run test",
     "prepublishOnly": "npm run build",
