--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -61,6 +61,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/json-schema": "^7.0.15",
     "tslib": "^2.8.1"
   },
   "publishConfig": {
