--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
     "importHelpers": true,
     "paths": {
       "tslib": ["./node_modules/tslib/tslib.d.ts"]
-    }
+    },
+    "forceConsistentCasingInFileNames": true
   }
 }
