--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
       "tslib": ["./node_modules/tslib/tslib.d.ts"]
     },
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+    "useUnknownInCatchVariables": false
   }
 }
