refactor: remove duplicate code

--- a/packages/paginator/tsconfig.json
+++ b/packages/paginator/tsconfig.json
@@ -5,6 +5,6 @@
     "outDir": "./lib",
     "rootDir": "./src",
     "skipLibCheck": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   }
 }
