--- a/packages/paginator/package.json
+++ b/packages/paginator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apimatic/paginator",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "provides the async utilities for handling paginated API responses.",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -34,26 +34,8 @@
       "limit": "5 KB"
     }
   ],
-  "devDependencies": {
-    "@babel/cli": "^7.26.4",
-    "@babel/core": "^7.26.10",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@size-limit/preset-small-lib": "^7.0.8",
-    "babel-plugin-annotate-pure-calls": "^0.4.0",
-    "jest": "^26.6.3",
-    "jsdom": "^19.0.0",
-    "jsdom-global": "^3.0.2",
-    "lerna-alias": "3.0.3-0",
-    "rollup": "^3.29.5",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-typescript2": "^0.31.0",
-    "size-limit": "^7.0.8",
-    "ts-jest": "^26.4.0",
-    "typescript": "^4.9.5"
-  },
   "dependencies": {
-    "@apimatic/core": "^0.10.19",
-    "tslib": "^2.8.1"
+    "@apimatic/core": "^0.10.19"
   },
   "publishConfig": {
     "access": "public"
