--- a/packages/paginator/package.json
+++ b/packages/paginator/package.json
@@ -35,7 +35,8 @@
     }
   ],
   "dependencies": {
-    "@apimatic/core": "^0.10.19"
+    "@apimatic/core": "^0.10.19",
+    "@apimatic/core-interfaces": "^0.2.9"
   },
   "publishConfig": {
     "access": "public"
