--- a/tsconfig.monorepo.json
+++ b/tsconfig.monorepo.json
@@ -38,7 +38,7 @@
       "path": "./packages/test-utilities"
     },
     {
-      "path": "./packages/paginator"
+      "path": "./packages/pagination"
     }
   ]
 }
