--- a/packages/convert-to-stream/package.json
+++ b/packages/convert-to-stream/package.json
@@ -35,7 +35,8 @@
     "typescript": "^4.6.3"
   },
   "browser": {
-    "./lib/convertToStream.js": "./lib/convertToBlob.js"
+    "./lib/convertToStream.js": "./lib/convertToBlob.js",
+    "./lib/convertFromStream.js": "./lib/convertFromBlob.js"
   },
   "dependencies": {
     "tslib": "2.8.1"
