--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=apimatic_apimatic-js-runtime
+sonar.organization=apimatic
 sonar.projectName=APIMatic JS Runtime
 sonar.host.url=https://sonarcloud.io
 
