--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,6 @@ sonar.projectName=APIMatic JS Runtime
 sonar.host.url=https://sonarcloud.io
 
 sonar.sources=packages
-sonar.tests=packages
+sonar.tests=packages/**/test/**/*.test.ts
 sonar.javascript.lcov.reportPaths=packages/**/coverage/lcov.info
 sonar.sourceEncoding=UTF-8
