feat(axios-client-adapter): add support for configurable proxy (#254)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,21 +35,10 @@ jobs:
       - name: Code formatting
         run: yarn check-style
         
-      - name: Upload coverage reports
+      - name: SonarQube Scan
         if: ${{ github.actor != 'dependabot[bot]' }}
-        uses: paambaati/codeclimate-action@v3.0.0
+        uses: SonarSource/sonarqube-scan-action@v5.2.0
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.TEST_REPORTER_ID }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          debug: true
-          coverageLocations: |
-            ${{github.workspace}}/packages/core/coverage/lcov.info:lcov
-            ${{github.workspace}}/packages/authentication-adapters/coverage/lcov.info:lcov
-            ${{github.workspace}}/packages/axios-client-adapter/coverage/lcov.info:lcov
-            ${{github.workspace}}/packages/file-wrapper/coverage/lcov.info:lcov
-            ${{github.workspace}}/packages/http-headers/coverage/lcov.info:lcov
-            ${{github.workspace}}/packages/http-query/coverage/lcov.info:lcov
-            ${{github.workspace}}/packages/oauth-adapters/coverage/lcov.info:lcov
-            ${{github.workspace}}/packages/schema/coverage/lcov.info:lcov
-            ${{github.workspace}}/packages/test-utilities/coverage/lcov.info:lcov
-            ${{github.workspace}}/packages/pagination/coverage/lcov.info:lcov
+          projectBaseDir: .
