--- a/packages/axios-client-adapter/package.json
+++ b/packages/axios-client-adapter/package.json
@@ -64,19 +64,15 @@
     "@apimatic/http-headers": "^0.3.6",
     "@apimatic/http-query": "^0.3.6",
     "@apimatic/json-bigint": "^1.2.0",
+    "@apimatic/proxy": "^0.0.1",
     "@apimatic/schema": "^0.7.17",
     "axios": "^1.8.4",
     "detect-browser": "^5.3.0",
     "detect-node": "^2.1.0",
     "form-data": "^4.0.1",
-    "http-proxy-agent": "^7.0.2",
-    "https-proxy-agent": "^7.0.6",
     "lodash.flatmap": "^4.5.0",
     "tiny-warning": "^1.0.3",
     "tslib": "^2.8.1"
-  },
-  "browser": {
-    "./lib/proxyAgent.js": "./lib/proxyAgentBrowser.js"
   },
   "publishConfig": {
     "access": "public"
