feat: add metadata interfaces and core client interface

--- a/tsconfig.monorepo.json
+++ b/tsconfig.monorepo.json
@@ -26,6 +26,9 @@
       "path": "./packages/http-query"
     },
     {
+      "path": "./packages/metadata-interfaces"
+    },
+    {
       "path": "./packages/xml-adapter"
     },
     {
