--- a/packages/metadata-interfaces/tsconfig.json
+++ b/packages/metadata-interfaces/tsconfig.json
@@ -5,7 +5,6 @@
     "outDir": "./lib",
     "rootDir": "./src",
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "verbatimModuleSyntax": true
+    "resolveJsonModule": true
   }
 }
