--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@apimatic/schema",
   "author": "APIMatic Ltd.",
-  "version": "0.7.20",
+  "version": "0.7.21-alpha.0",
   "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
@@ -61,6 +61,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/json-schema": "^7.0.15",
     "tslib": "^2.8.1"
   },
   "publishConfig": {
