fix(hmac-signature-verifier): add http-headers as dependancy instead of core

--- a/packages/hmac-signature-verifier/package.json
+++ b/packages/hmac-signature-verifier/package.json
@@ -36,7 +36,7 @@
   ],
   "dependencies": {
     "@apimatic/core-interfaces": "^0.2.12",
-    "@apimatic/core": "^0.10.26"
+    "@apimatic/http-headers": "^0.3.7"
   },
   "publishConfig": {
     "access": "public"
