refactor: simplify build commands in CI workflow and update tsconfig references

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/${{ inputs.package }}
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -23,16 +27,16 @@ jobs:
           node-version: ${{ inputs.node }}
 
       - name: Install deps
-        run: yarn --cwd packages/${{ inputs.package }}
+        run: yarn
 
       - name: Build
-        run: yarn --cwd packages/${{ inputs.package }} build
+        run: yarn build
 
       - name: Test
-        run: yarn --cwd packages/${{ inputs.package }} test
+        run: yarn test
 
       - name: Lint
-        run: yarn --cwd packages/${{ inputs.package }} lint
+        run: yarn lint
 
       - name: Code formatting
-        run: yarn --cwd packages/${{ inputs.package }} check-style
+        run: yarn check-style
