--- a/tsconfig.monorepo.json
+++ b/tsconfig.monorepo.json
@@ -29,6 +29,9 @@
       "path": "./packages/metadata-interfaces"
     },
     {
+      "path": "./packages/mcp-core"
+    },
+    {
       "path": "./packages/xml-adapter"
     },
     {
