--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ inputs.node }}
 
       - name: Install deps
-        run: yarn install --frozen-lockfile --ignore-engines
+        run: yarn install --ignore-engines
 
       - name: Build
         run: yarn build
