--- a/packages/metadata-interfaces/package.json
+++ b/packages/metadata-interfaces/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "clean": "rm -rf lib es umd tsconfig.tsbuildinfo",
-    "test": "jest",
+    "test": "jest --ci --coverage --maxWorkers=2 --passWithNoTests",
     "build": "npm run clean && tsc && rollup -c --bundleConfigAsCjs && npm run annotate:es",
     "annotate:es": "babel es --out-dir es --no-babelrc --plugins annotate-pure-calls",
     "preversion": "npm run test",
