--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,11 +24,10 @@ jobs:
           node-version: ${{ inputs.node }}
 
       - name: Install deps
-        run: yarn install 
-        working-directory: ./packages/${{ inputs.package }}
+        run: yarn install --ignore-engines
 
       - name: Build
-        run: yarn build
+        run: yarn build --scope ${{ inputs.package }} --include-dependencies
         working-directory: ./packages/${{ inputs.package }}
 
       - name: Test
