Revert "ci: update alpha branch (#295)"
This reverts commit 1a8d5924970a3513f1654e860aaf59832cebba53.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,7 +103,7 @@ jobs:
             SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
   prerelease:
-    if: github.ref == 'refs/heads/alpha' && github.event.inputs.version_type == 'prerelease (unstable or experimental changes 0.0.0-alpha.X)'
+    if: github.ref != 'refs/heads/master' && github.event.inputs.version_type == 'prerelease (unstable or experimental changes 0.0.0-alpha.X)'
     name: Publish the npm package as an alpha release
     runs-on: ubuntu-latest
     environment: Production
