--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "clean": "rimraf lib es umd tsconfig.tsbuildinfo",
-    "test": "jest --ci --coverage --maxWorkers=2 --passWithNoTests",
+    "test": "jest --passWithNoTests",
     "build": "npm run clean && tsc && rollup -c --bundleConfigAsCjs && npm run annotate:es",
     "annotate:es": "babel es --out-dir es --no-babelrc --plugins annotate-pure-calls",
     "preversion": "npm run test",
