feat: adds mcp-core and metadata-interfaces (#282)
* build: add json-schema types dep

* feat: update schema interface

* test: add test for number

* feat: handle most primitive types

* feat: handle arrays and maps

* feat: extend JSONSchema7 with OAS feats

* feat: oneOf/anyOf w/o discriminator map

* feat: basic object impl

* fix: missing type predicate for numberEnum

* feat: allOf without discriminator

* feat: unsafe defaultValue and const handling

* doc: add comment explaining JSON Schema interface

* feat: add metaschema

* fix: use openapi json schema dialect

* doc: explain impl of defaultValue and literal

* test: string, number and boolean

* refactor: return partial schema in toJSONSchema

* test: nullable

* fix: update string, number and boolean tests

* test: nullable booleans

* test: defaults and literals

* test: string enum

* fix: avoid wrapping string enums in quotes

* test: numberEnum

* test: bigint

* format: numberEnum and stringEnum tests

* test: object types w/o addProps

* test: additional properties

* test: array and map

* test: oneOf w/o discriminator

* fix: type imported from outDir instead of src

* test: anyOf w/o discriminator

* feat: oneOf w/ discriminator

* feat: anyOf w/ discriminator

* format: auto fixes

* refactor: oneOf/anyOf w/ discriminator common code

* temp: recursive object schema w/ failing test

* refactor: remove unused utility

* feat: use context type to keep track of $defs

* feat: handle context arg change for string

* fix: package import instead of local import

* fix: can't export with extension

* fix: extract schema from new context

* fix: handle context args for primitives

* feat: handle context args for array and map

* test: update tests for complex cases

* feat: use mutable context idea instead

* Partial revert "feat: handle context args for array and map"

This reverts commit 3dfc2e0d3a86a29496e1e3f3f40662e2d6c59a5d.

* partial revert "fix: handle context args for primitives"

This rever

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,14 @@
 name: CI
 on: [push]
+
 jobs:
   build:
     name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: ["14.x", "16.x", "17.x", "18.x", "19.x"]
+        node: ["14.x", "16.x", "17.x", "18.x", "19.x", "22.x"]
         os: [ubuntu-latest]
-        # os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
       - name: Checkout repo
@@ -19,6 +18,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
+
+      - name: Remove mcp-core for Node < 22
+        if: ${{ !startsWith(matrix.node, '22') }}
+        run: rm -rf packages/mcp-core
 
       - name: Install deps
         run: yarn
