fix(ci): mcp-core was private

--- a/packages/mcp-core/package.json
+++ b/packages/mcp-core/package.json
@@ -30,6 +30,9 @@
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.29.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "dependencies": {
     "@apimatic/json-bigint": "^1.2.0",
