fix: missing files prop in mcp-core package.json

--- a/packages/mcp-core/package.json
+++ b/packages/mcp-core/package.json
@@ -9,6 +9,11 @@
       }
     }
   },
+  "files": [
+    "lib/**/*",
+    "src",
+    "LICENSE.md"
+  ],
   "scripts": {
     "clean": "rimraf dist",
     "build": "tsc -p tsconfig.prod.json",
