--- a/packages/mcp-core/tsconfig.json
+++ b/packages/mcp-core/tsconfig.json
@@ -18,7 +18,7 @@
     "resolveJsonModule": true,
     "allowJs": false,
     "rootDir": ".",
-    "outDir": "dist",
+    "outDir": "lib",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
